# ros_kortex

./: .gitignore  LICENSE  build.sh  docker-compose-real.yaml  docker-compose-sim.yaml  docker-compose.yaml  dockerfile  generate_all.sh  my_ros_entrypoint.sh  readme.md  to_run_arm.txt
ik_fast/gen3_robotiq_2f_85_arm_ikfast_plugin/: CMakeLists.txt  gen3_robotiq_2f_85_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
kortex_actuator_driver/: CMakeLists.txt  RosGeneration.py  package.xml  readme.md
kortex_actuator_driver/msg/: AxisOffsets.msg  AxisPosition.msg  Command.msg  CommandModeInformation.msg  ControlLoop.msg  ControlLoopParameters.msg  ControlModeInformation.msg  CustomData.msg  CustomDataIndex.msg  CustomDataSelection.msg  DeviceTypes.msg  EncoderDerivativeParameters.msg  Feedback.msg  FrequencyResponse.msg  LoopSelection.msg  PositionCommand.msg  RampResponse.msg  SafetyIdentifier.msg  SafetyStatusValue.msg  Servoing.msg  StepResponse.msg  TorqueCalibration.msg  TorqueOffset.msg  UserProfileHandle.msg  VectorDriveParameters.msg
kortex_actuator_driver/protos/: ActuatorConfig.options  ActuatorConfig.proto  ActuatorCyclic.proto  Common.options
kortex_actuator_driver/src/: actuatorconfig_proto_converter.cpp  actuatorconfig_proto_converter.h  actuatorconfig_ros_converter.cpp  actuatorconfig_ros_converter.h  actuatorcyclic_proto_converter.cpp  actuatorcyclic_proto_converter.h  actuatorcyclic_ros_converter.cpp  actuatorcyclic_ros_converter.h  common_proto_converter.cpp  common_proto_converter.h  common_ros_converter.cpp  common_ros_converter.h  main.cpp  node.cpp  node.h
kortex_actuator_driver/srv/: GetEncoderDerivativeParameters.srv  GetTorqueOffset.srv  GetVectorDriveParameters.srv  ReadTorqueCalibration.srv  Refresh.srv  RefreshCommand.srv  RefreshCustomData.srv  RefreshFeedback.srv  SetControlLoopParameters.srv  SetControlMode.srv  SetEncoderDerivativeParameters.srv  SetTorqueOffset.srv  SetVectorDriveParameters.srv  StartFrequencyResponse.srv  StartRampResponse.srv  StartStepResponse.srv  WriteTorqueCalibration.srv
kortex_actuator_driver/templates/: NodeServices.cpp.jinja2  NodeServices.h.jinja2  main.jinja2  proto_converter.cpp.jinja2  proto_converter.h.jinja2  ros_converter.cpp.jinja2  ros_converter.h.jinja2
kortex_bringup/: CMakeLists.txt  package.xml  readme.md
kortex_bringup/launch/: kortex_actuator_driver.launch  kortex_device_manager.launch  kortex_driver.launch  kortex_vision_config_driver.launch
kortex_control/: CMakeLists.txt  package.xml  readme.md
kortex_description/: CMakeLists.txt  package.xml  readme.md
kortex_description/config/: joint_names_JACO3_URDF_V11.yaml
kortex_description/launch/: display.launch  gazebo.launch  visualize.launch
kortex_description/meshes/: Bracelet_Link.STL  ForeArm_Link.STL  HalfArm1_Link.STL  HalfArm2_Link.STL  Shoulder_Link.STL  Wrist1_Link.STL  Wrist2_Link.STL  base_link.STL
kortex_description/multiple_robots/: kortex_dual_robots.xacro
kortex_description/robots/: gazebo_depth_camera.xacro  gazebo_depth_camera_standalone.xacro  gen3.xacro  gen3_lite_gen3_lite_2f.xacro  gen3_robotiq_2f_140.xacro  gen3_robotiq_2f_85.xacro  kortex_robot.xacro
kortex_description/urdf/: JACO3_URDF_V10.urdf  JACO3_URDF_V11.urdf
kortex_driver/: CMakeLists.txt  RosGeneration.py  conanfile.py  kortex_driver.sh  package.xml  readme.md
kortex_driver/cmake/: README.md
kortex_driver/launch/: kortex_arm_driver.launch  kortex_driver.launch  kortex_dual_driver.launch  test_simulator.launch
kortex_driver/msg/: Action.msg  ActionEvent.msg  ActionExecutionState.msg  ActionHandle.msg  ActionList.msg  ActionNotification.msg  ActionNotificationList.msg  ActionType.msg  Action_action_parameters.msg  ActivateMapHandle.msg  ActuatorCommand.msg  ActuatorFeedback.msg  ActuatorInformation.msg  Admittance.msg  AdvancedSequenceHandle.msg  AppendActionInformation.msg  ArmStateInformation.msg  ArmStateNotification.msg  BaseFeedback.msg  CartesianLimitation.msg  CartesianLimitationList.msg  CartesianReferenceFrame.msg  CartesianReferenceFrameRequest.msg  CartesianSpeed.msg  CartesianTrajectoryConstraint.msg  CartesianTrajectoryConstraint_type.msg  ChangeJointSpeeds.msg  ChangeTwist.msg  Command.msg  CommunicationInterfaceConfiguration.msg  ConfigurationChangeNotification.msg  ConfigurationChangeNotificationList.msg  ConfigurationNotificationEvent.msg  Connection.msg  ConstrainedJointAngle.msg  ConstrainedJointAngles.msg  ConstrainedOrientation.msg  ConstrainedPose.msg  ConstrainedPosition.msg  ControlMode.msg  (+119 more)
kortex_driver/protos/: ActuatorConfig.options  ActuatorConfig.proto  ActuatorCyclic.proto  Base.options  Base.proto  BaseCyclic.proto  Common.options  Common.proto  ControlConfig.proto  DeviceConfig.options  DeviceConfig.proto  DeviceManager.proto  Errors.options  Errors.proto  GripperConfig.proto  GripperCyclic.proto  GripperCyclicMessage.options  GripperCyclicMessage.proto  InterconnectConfig.options  InterconnectConfig.proto  InterconnectCyclic.proto  InterconnectCyclicMessage.proto  ProductConfiguration.proto  Session.proto  VisionConfig.proto
kortex_driver/scripts/: generate_protobuf_wrapper_files.sh  ros_kortex_generator.py  source_and_build_workspace.bash
kortex_driver/src/: base_proto_converter.cpp  base_proto_converter.h  base_ros_converter.cpp  base_ros_converter.h  basecyclic_proto_converter.cpp  basecyclic_proto_converter.h  basecyclic_ros_converter.cpp  basecyclic_ros_converter.h  common_proto_converter.cpp  common_proto_converter.h  common_ros_converter.cpp  common_ros_converter.h  main.cpp  node.cpp  node.h
kortex_driver/srv/: ActivateMap.srv  ConfigurationChangeTopic.srv  CreateAction.srv  CreateMap.srv  CreateMapping.srv  CreateProtectionZone.srv  CreateSequence.srv  DeleteSequenceTask.srv  DeleteUserProfile.srv  GetActionExecutionState.srv  (+38 more)
kortex_examples/: CMakeLists.txt  package.xml  readme.md  setup.py
kortex_gazebo/: CMakeLists.txt  package.xml  readme.md
kortex_tests/: CMakeLists.txt  package.xml
kortex_vision_config_driver/: CMakeLists.txt  package.xml  readme.md
(+523 files in other folders)
