<package>
  <name>kortex_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for ultra_lightweight</p>
    <p>This package contains configuration data, 3D models and launch files
for ultra_lightweight robot</p>
  </description>
  <author>KINOVA</author>
  <maintainer email="ros@kinova.ca" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>