<package>
  <name>kortex_description</name>
  <version>2.2.2</version>
  <description>
    <p>URDF and xacro description package for Kortex robots</p>
    <p>This package contains configuration data, 3D models and launch files
for Kortex arms and supported grippers</p>
  </description>
  <author email="avannobel@kinova.ca">Alexandre Vannobel</author>
  <maintainer email="avannobel@kinova.ca" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>xacro</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
