<?xml version="1.0"?>
<package format="2">
  <name>kortex_driver</name>
  <version>2.2.2</version>
  <description>The package that acts as a robot's driver. Supports simulated and real Kortex robots.</description>

  <maintainer email="support@kinova.ca">Kinova Support</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>gen3_move_it_config</exec_depend>
  <exec_depend>gen3_robotiq_2f_85_move_it_config</exec_depend>
  <exec_depend>gen3_robotiq_2f_140_move_it_config</exec_depend>
  <exec_depend>gen3_lite_gen3_lite_2f_move_it_config</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rostest</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
