<package>
  <name>kortex_gazebo</name>
  <version>2.2.2</version>
  <description>
    <p>Gazebo simulation package for Kortex robots</p>
    <p>This package contains launch files to spawn the Kortex robot in Gazebo and visualize it in RViz, as well as configuration files.</p>
  </description>
  <maintainer email="support@kinova.ca">Kinova Support</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>kortex_control</run_depend>
  <run_depend>kortex_driver</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_ros_control_interface</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <architecture_independent />
  </export>
</package>
